--- a/.github/workflows/first-actions.yml
+++ b/.github/workflows/first-actions.yml
@@ -11,20 +11,18 @@ jobs:
         python-version: [3.8, 3.9]
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+    - uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.python-version }}
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: ${{ matrix.python-version }}
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install pytest
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install pytest
 
-      - name: Run tests
-        run: |
-          cd src
-          pytest app.py
+    - name: Run tests
+      working-directory: src
+      run: pytest addition.py
