--- a/.github/workflows/first-actions.yml
+++ b/.github/workflows/first-actions.yml
@@ -6,22 +6,17 @@ jobs:
   build:
     runs-on: self-hosted
 
-    strategy:
-      matrix:
-        python-version: [3.8, 3.9]
-
     steps:
     - uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: ${{ matrix.python-version }}
+    - name: Check Python version
+      run: python3 --version
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install pytest
+        python3 -m ensurepip --upgrade
+        python3 -m pip install --upgrade pip
+        pip3 install pytest
 
     - name: Run tests
       working-directory: src
